%% Physical ERD based on migrations and confirmed relations.
erDiagram
  USERS {
    bigint id PK
    string name
    string email UK
    string password
    string role
    boolean active
    datetime deleted_at
  }
  AUDIT_LOGS {
    bigint id PK
    bigint user_id FK
    string action
    string model_type
    bigint model_id
    json old_values
    json new_values
    string ip_address
    text user_agent
    datetime created_at
  }
  HOSPITAL_SERVICES {
    bigint id PK
    string name
    text description
    boolean active
    datetime deleted_at
  }
  STAFF {
    bigint id PK
    bigint user_id FK
    bigint hospital_service_id FK
    string ci
    string full_name
    string position
    string phone
    string email
    boolean active
    datetime deleted_at
  }
  SHIFT_TEMPLATES {
    bigint id PK
    string code
    string name
    time start_time
    time end_time
    string color
    boolean is_working_shift
    boolean active
    datetime deleted_at
  }
  SERVICE_SHIFT_TEMPLATES {
    bigint id PK
    bigint hospital_service_id FK
    bigint shift_template_id FK
    string custom_code
    string custom_name
    time custom_start_time
    time custom_end_time
    string custom_color
    boolean active
    datetime deleted_at
  }
  SHIFT_ASSIGNMENTS {
    bigint id PK
    bigint staff_id FK
    bigint hospital_service_id FK
    bigint service_shift_template_id FK
    date assignment_date
    datetime start_at
    datetime end_at
    string status
    text notes
    bigint created_by FK
    bigint updated_by FK
    datetime deleted_at
  }
  SERVICE_MANAGERS {
    bigint id PK
    bigint user_id FK
    bigint hospital_service_id FK
    datetime deleted_at
  }
  SHIFT_CHANGE_REQUESTS {
    bigint id PK
    bigint shift_assignment_id FK
    bigint requested_by FK
    bigint reviewed_by FK
    text reason
    string status
    text review_notes
    datetime deleted_at
  }
  NOTIFICATIONS {
    bigint id PK
    bigint user_id FK
    string type
    string title
    text message
    json data
    datetime read_at
  }

  USERS ||--o| STAFF : optional profile
  USERS ||--o{ AUDIT_LOGS : actor
  USERS ||--o{ SERVICE_MANAGERS : manages
  USERS ||--o{ SHIFT_CHANGE_REQUESTS : requester
  USERS ||--o{ SHIFT_CHANGE_REQUESTS : reviewer
  USERS ||--o{ NOTIFICATIONS : receives
  USERS ||--o{ SHIFT_ASSIGNMENTS : created_by
  USERS ||--o{ SHIFT_ASSIGNMENTS : updated_by

  HOSPITAL_SERVICES ||--o{ STAFF : groups
  HOSPITAL_SERVICES ||--o{ SERVICE_MANAGERS : scope
  HOSPITAL_SERVICES ||--o{ SERVICE_SHIFT_TEMPLATES : configures
  HOSPITAL_SERVICES ||--o{ SHIFT_ASSIGNMENTS : hosts

  SHIFT_TEMPLATES ||--o{ SERVICE_SHIFT_TEMPLATES : base
  SERVICE_SHIFT_TEMPLATES ||--o{ SHIFT_ASSIGNMENTS : used_by
  STAFF ||--o{ SHIFT_ASSIGNMENTS : assigned_to
  SHIFT_ASSIGNMENTS ||--o{ SHIFT_CHANGE_REQUESTS : requested_for

